# haskellNix

./: CHANGELOG.md  README.md  default.nix  haskellNix.cabal  stack.yaml
app/: Main.hs
nix/: sources.json
src/: Lib.hs
