name:                haskellNix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/PardusEidolon/haskellNix#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md
library
  default-language:    Haskell2010
  exposed-modules:     Lib
  ghc-options:        -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && < 5


executable haskellNix
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskellNix
  ghc-options:        -Wall -fwarn-tabs
